<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel" type="com.example.mystuff.model.InventarioViewModel" />
        <variable name="principal" type="com.example.mystuff.fragments.TelaPrincipal" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.TelaPrincipal">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layoutFABContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabNovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/telaPrincipal_fab_hint"
                android:focusable="true"
                android:src="@android:drawable/ic_input_add"
                android:tint="@color/white"
                app:backgroundTint="@color/purple_200" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAgruparPorComodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{principal::configurarAgrupamento}" />

        <TextView
            android:id="@+id/labelAgrupamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/telaPrincipal_agrupamento"
            app:layout_constraintBottom_toBottomOf="@+id/switchAgruparPorComodo"
            app:layout_constraintStart_toEndOf="@+id/switchAgruparPorComodo"
            app:layout_constraintTop_toTopOf="@+id/switchAgruparPorComodo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rclListaPrincipal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchAgruparPorComodo"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="5"
            tools:listitem="@layout/item_lista_principal_item" />

        <RadioGroup
            android:id="@+id/grupoRadioOrdenacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/switchAgruparPorComodo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switchAgruparPorComodo">

            <RadioButton
                android:id="@+id/rbtnOrdenacaoAlfabetica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:onClick="@{principal::configurarOrdenacao}"
                android:text="@string/telaPrincipal_ordenacao_alfabetica"
                android:textColor="@android:color/tertiary_text_light" />

            <RadioButton
                android:id="@+id/rbtnOrdenacaoNumerica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{principal::configurarOrdenacao}"
                android:text="@string/telaPrincipal_ordenacao_itens"
                android:textColor="@android:color/tertiary_text_light" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>